--- a/src/components/app/public/styles/app.css
+++ b/src/components/app/public/styles/app.css
@@ -1,3 +1,7 @@
+body{
+    background: linear-gradient(to top right, rgba(255,82,99,0.9) 10%, rgba(255,115,129,0.9) 65%, rgba(252,189,1,0.9) 125%) !important;
+    font-family: 'Comfortaa-Regular';
+}
 .centerAlign{
     text-align: center
 }
@@ -73,6 +77,68 @@ button:focus{
     background: white;
     padding: 13px;
 }
-.container-all{
-    min-height: 600px;
+
+.play{
+    background: linear-gradient(to top right, rgba(255,82,99,0.9) 10%, rgba(255,115,129,0.9) 65%, rgba(252,189,1,0.9) 125%);
+    color: white;
+    padding: 28px 44px 28px 44px;
+    font-size: 44px;
+    border-radius: 11px;
 }
+
+
+.show-me{
+    color: #ff5263e6;
+    padding: 5px;
+    border-radius: 4px;
+    font-weight: bold;
+}
+.ImgMediaCard-card-150 {
+    margin-bottom: 17px;
+}
+
+  /* DESKTOP FUll */ 
+@media (max-width: 1920px) {
+        .container-all{
+            min-height: 900px;
+        }
+        
+        .logo {
+            font-size: 55px;
+            position: relative;
+            font-weight: bold;
+        }
+        .box-instructions{
+            position: relative;
+            top: -140px;
+        }
+        .logo-app {
+            width: 238px;
+            position: relative;
+            top: 6px;
+        }
+        .container-list {
+            padding-left: 5%;
+        }
+    }
+
+@media (max-width: 992px){
+    .box-instructions{
+        position: relative;
+        top: -100px;
+    }
+      .logo {
+            font-size: 30px;
+            position: relative;
+            font-weight: bold;
+        }
+        img{
+            width: 100%;
+        }
+        .logo-app {
+           width: 238px;
+            position: relative;
+            top: 6px;
+        }
+        
+    }
