App implemented - Version 1.0

--- a/src/components/app/public/styles/app.css
+++ b/src/components/app/public/styles/app.css
@@ -107,6 +107,7 @@ button:focus{
             font-size: 55px;
             position: relative;
             font-weight: bold;
+            
         }
         .box-instructions{
             position: relative;
@@ -118,7 +119,11 @@ button:focus{
             top: 6px;
         }
         .container-list {
-            padding-left: 5%;
+            padding-left: 12%;
+        }
+        .img-logo{
+            width: 35%;
+
         }
     }
 
